--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
 spring.jpa.open-in-view=true
-server.port=8081
+server.port=8080
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.mvc.view.prefix=public
 spring.mvc.view.suffix=html
+spring.web.resources.static-locations[0]=file:src/main/resources/public/
+spring.web.resources.static-locations[1]=classpath:public
